# memwatch

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
src/: main.rs  mempool.rs
src/data/: tx.json
utils/: conversion.go  threshold.go
