[package]
name = "memwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0"

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

crossterm = { version = "0.19" }
tui = {version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
chrono = { version = "0.4", features = ["serde"] }

ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1", features = ["full"] }
ethers-providers = "0.6.2"
ethers-core = "0.6.2"
